--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,13 @@ add_executable(BST bst/bst.c bst/bst.h bst/bst_main.c)
 add_executable(MinHeap heap/minheap.c heap/minheap.h heap/minheap_main.c)
 add_executable(RBT rbt/rbt.c rbt/rbt.h rbt/rbt_main.c)
 add_executable(AVL avl/avl.c avl/avl.h avl/avl_main.c)
-add_executable(QuickSelectMain first_part/quickselect_main.c first_part/utils.c first_part/utils.h first_part/select_fun.c first_part/select_fun.h)
+add_executable(QuickSelectMain first_part/quickselect_main.c first_part/utils.c
+        first_part/utils.h first_part/select_fun.c first_part/select_fun.h)
 
 add_executable(HeapSelectMain first_part/heapselect_main.c first_part/utils.c first_part/utils.h
         first_part/select_fun.c first_part/select_fun.h heap/minheap.c heap/minheap.h
         heap/maxheap.c heap/maxheap.h)
+
+add_executable(MedianSelectMain first_part/medianselect_main.c first_part/select_fun.c
+        first_part/select_fun.h first_part/utils.h first_part/utils.c heap/minheap.c
+        heap/minheap.h heap/maxheap.c heap/maxheap.h)
