Now using doubles instead of longs for better precision and easier code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,5 @@ add_executable(MedianSelectMain first_part/medianselect_main.c first_part/select
 add_executable(Times first_part/select_fun.c
         first_part/select_fun.h first_part/utils.h first_part/utils.c heap/minheap.c
         heap/minheap.h heap/maxheap.c heap/maxheap.h mtwister/mtwister.c mtwister/mtwister.h first_part/times.c)
+
+target_link_libraries(Times m)
